# serializer version: 1
# name: test_script_ok[script_multi]
  '''
  script
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    script_item
      select
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            path_expression
              ident	table2
  
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi]
  '''
  script
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    script_item
      script
        select
          select_list
            select_expr
              ident	col2
          from_clause
            from_item_table
              path_expression
                ident	table2
        script_item
  
  '''
# ---
# name: test_script_ok[script_single]
  '''
  script
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    script_item
  
  '''
# ---
# name: test_script_ok[script_top_level_from]
  '''
  script
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    script_item
  
  '''
# ---
